--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -1,7 +1,8 @@
-name: flutter_dev
+name: demo
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 version: 1.0.0+1
 
 environment:
